// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`replacePathSepForRegex() posix should match the expected output from #5216 1`] = `
Array [
  "jest-config\\\\/.*normalize",
  "jest-config/.*normalize",
  "jest-config\\\\.*normalize",
  "jest-config\\\\\\\\.*normalize",
]
`;

exports[`replacePathSepForRegex() win32 should match the expected output from #5216 1`] = `
Array [
  "jest-config\\\\\\\\\\\\\\\\.*normalize",
  "jest-config\\\\\\\\.*normalize",
  "jest-config\\\\.*normalize",
  "jest-config\\\\\\\\.*normalize",
]
`;
